added lines to html file

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
+    <header class="header">
+        <a href=""><img src="" alt="Логотип-ссылка"></a>
+        <ul class="contact">
+            <li class="contact-link"><a href="tel:+74951234567">+7 (495) 123-45-67</a></li>
+            <li class="contact-link"><a href="mailto:vlad@htmlbook.ru">Email</a></li>
+            <li class="contact-link"><a href="texpotderjka">Техподдержка</a></li>
+        </ul>
     </header>
 
     <main>
